--- a/index.html
+++ b/index.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
 <html></html>
 <head>
-    <title>Det her er en title</title>
+    <title>lind.gg portfolio</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="bg-lightgreen">
-        header listen
+        <div class="logo">
+            <p>logo</p>
+        </div>
+        <input type="checkbox" id="nav-toggle" class="nav-toggle">
+        <nav>
+            <ul class="nav-font">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About me</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <label for="nav-toggle" class="nav-toggle-label">
+            <span></span>
+        </label>
     </header>
     <div class="container">
         <section class="bg-green">
             <h1 class="font-white">Welcome to my portfolio</h1>
             <div class="split">
-                <img class="profil" src="images/profil.jpg" alt="Picture of Emil">
-                <p class="font-white">Hi! My name is Emil, im an up and coming frontend developer. Hope you enjoy your stay!</p>
+                <img class="profil" src="images/profil.png" alt="Picture of Emil">
+                <h3 class="font-white" id="intro">Hi! My name is Emil. <br> Im an up and coming frontend developer. <br>Hope you enjoy your stay!</h3>
             </div>
         </section>
     </div>
@@ -36,7 +50,7 @@
         <section class="bg-white">
             <h2 class="font-green">About me</h2>
             <div class="split">
-                <img class="profil" src="images/profil.jpg" alt="Picture of Emil">
+                <img class="profil" src="images/profil.png" alt="Picture of Emil">
                 <div><p class="font-green">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem in voluptatem molestias, non adipisci enim molestiae, veritatis, dignissimos repellendus placeat assumenda! Quasi quia dolorum quisquam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem in voluptatem molestias, non adipisci enim molestiae, veritatis, dignissimos repellendus placeat assumenda! Quasi quia dolorum quisquam</p></div>
             </div>
         </section>
