--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="split">
                 
                 <div><p class="font-green" id="about-me">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem in voluptatem molestias, non adipisci enim molestiae, veritatis, dignissimos repellendus placeat assumenda! Quasi quia dolorum quisquam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem in voluptatem molestias, non adipisci enim molestiae, veritatis, dignissimos repellendus placeat assumenda! Quasi quia dolorum quisquam</p></div>
-                <img class="profil" src="images/profil2.png" alt="Picture of Emil">
+                <img class="profil2" src="images/profil2.png" alt="Picture of Emil">
             </div>
         </section>
     </div>
