--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                 <h2 class="text-center font-white" >My skillsets</h2>
                 <div class="split">
                     <div class="skillsets">
-                    <div>Adobe ting</div>
-                    <div>HTML&CSS</div>
-                    <div>Wordpress</div>
-                    <div>Foto&video</div>
+                    <div><h3 class="font-white">Adobe Programs</h3><img id="adobe" src="images/adobe.png" alt="Adobe Program Logos"></div>
+                    <div><h3 class="font-white">HTML & CSS</h3> <img id="htmlcss" src="images/htmlcss.png" alt="HTML&CSS Logo"></div>
+                    <div><h3 class="font-white">Wordpress</h3><img id="wordpress" src="images/wordpress.png" alt="wordpress logo"></div>
+                    <div><h3 class="font-white">Photo & Video</h3><img id="camera" src="images/camera.png" alt="camera logo"></div>
                 </div>
             </div>
          </section>
@@ -86,6 +86,8 @@
             <div class="split">
                 <h2 class="font-green">Contact</h2>
                 <div><p class="font-green">I am always ready to answer questions about my work or possible projects in the future</p></div>
+                <p>emilwaellind@gmail.com</p>
+                <p>42544888</p>
             </div>
         </section>
     </div>
