--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <nav>
                 <ul class="nav-font">
                     <li><a href="#">Home</a></li>
-                    <li><a href="/projekt1.html">About me</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#aboutme">About me</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
             <label for="nav-toggle" class="nav-toggle-label">
@@ -51,10 +51,9 @@
             
         </div>
         <div class="container">
-            <section class="bg-white">
+            <section class="bg-white" id="aboutme">
                 <h2 class="font-green">About me</h2>
                 <div class="split">
-                    
                     <div><p class="font-green" id="about-me">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem in voluptatem molestias, non adipisci enim molestiae, veritatis, dignissimos repellendus placeat assumenda! Quasi quia dolorum quisquam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem in voluptatem molestias, non adipisci enim molestiae, veritatis, dignissimos repellendus placeat assumenda! Quasi quia dolorum quisquam</p></div>
                     <img class="profil2" src="images/profil2.png" alt="Picture of Emil">
                 </div>
@@ -64,7 +63,7 @@
             <section class="bg-green">
                 <h2 class="text-center font-white">Projects</h2>
                 <div class="split">
-                    <div class="projects font-white">
+                    <div class="projects font-white" id="projects">
                         <div><h3>Projekt 1</h3></div>
                         <div><h3>Projekt 2</h3></div>
                         <div><h3>Projekt 2</h3></div>
@@ -82,7 +81,7 @@
         <div class="container">
             <section class="bg-white">
                 <div class="split">
-                    <h2 class="font-green">Contact</h2>
+                    <h2 class="font-green" id="contact">Contact</h2>
                     <div><p class="font-green">I am always ready to answer questions about my work or possible projects in the future</p></div>
                     <p>emilwaellind@gmail.com</p>
                     <p>42544888</p>
