--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header class="bg-lightgreen">
             <div class="logo">
-                lind.gg
+                <a class="font-white" href="/index.html">lind.gg</a>
             </div>
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <nav>
@@ -64,28 +64,34 @@
                 <h2 class="text-center font-white">Projects</h2>
                 <div class="split">
                     <div class="projects font-white" id="projects">
-                        <div><h3>Projekt 1</h3></div>
-                        <div><h3>Projekt 2</h3></div>
-                        <div><h3>Projekt 2</h3></div>
+                        <a href="/projekt1.html"><div><h3 class="font-white">Redesign of Website</h3><img id="redesignfront" src="images/side1redesign.png" alt="picture of website redesign"></div></a>
+                        <a href="/projekt2.html"><div><h3 class="font-white">CSS Animation</h3><img id="cssanimation" src="images/logoprojekt.png" alt="picture of logo"></div></a>
+                        <a href="/projekt3.html"><div><h3 class="font-white">Projekt 2</h3></div></a>
                     </div>
                 </div>
                 <div class="split">
                     <div class="projects font-white">
-                        <div><h3>Projekt 2</h3></div>
-                        <div><h3>Projekt 2</h3></div>
-                        <div><h3>Projekt 2</h3></div>
+                        <a href="/projekt4.html"><div><h3 class="font-white">Projekt 1</h3></div></a>
+                        <a href="/projekt5.html"><div><h3 class="font-white">Projekt 2</h3></div></a>
+                        <a href="/projekt6.html"><div><h3 class="font-white">Projekt 2</h3></div></a>
                     </div>
                 </div>
             </section>
         </div>
         <div class="container">
             <section class="bg-white">
-                <div class="split">
+                <footer class="split">
                     <h2 class="font-green" id="contact">Contact</h2>
                     <div><p class="font-green">I am always ready to answer questions about my work or possible projects in the future</p></div>
-                    <p>emilwaellind@gmail.com</p>
-                    <p>42544888</p>
-                </div>
+                </footer>>
+                <footer class="split">
+                    <ul id="footerlist">
+                        <li><a href="">emilwaellind@gmail.com</a></li>
+                        <li><a href=""></a>+45 42544888</li>
+                        <li><a href=""></a></li>
+
+                    </ul>
+                </footer>
             </section>
         </div>
 
