--- a/projekt3.html
+++ b/projekt3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html></html>
 <head>
-    <title>Redesign of website</title>
+    <title>project-1</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -30,9 +30,9 @@
                 <p class="font-white">This project was about bing bong Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, adipisci.</p>
             </div>
             <div class="split-images">
-                <img class="center-image" src="/images/side1redesign.png" alt="picture of redesign">
-                <img class="center-image" src="/images/side2redesign.png" alt="picture of redesign">
-                <img class="center-image" src="/images/redesignside3.PNG" alt="picture of redesign">
+                <img class="center-image" src="/images/" alt="picture of redesign">
+                <img class="center-image" src="/images/" alt="picture of redesign">
+                <img class="center-image" src="/images/" alt="picture of redesign">
             </div>
         </section>
     </div>
