--- a/projekt2.html
+++ b/projekt2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html></html>
 <head>
-    <title>Redesign of website</title>
+    <title>CSS Animation</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -25,14 +25,13 @@
     </header>
     <div class="container">
         <section class="bg-green stretch">
-            <h2 class="font-white text-left">Redesigning website</h2>
+            <h2 class="font-white text-left">CSS Animation</h2>
             <div class="split">
-                <p class="font-white">This project was about bing bong Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, adipisci.</p>
+                <p class="font-white">This project was about creating a moving animation using Illustrator and CSS. I decided to animate a logo i made.<br>The animation works by moving a spritesheet made in illustrator.</p>
             </div>
             <div class="split-images">
-                <img class="center-image" src="/images/side1redesign.png" alt="picture of redesign">
-                <img class="center-image" src="/images/side2redesign.png" alt="picture of redesign">
-                <img class="center-image" src="/images/redesignside3.PNG" alt="picture of redesign">
+                <img class="center-image" src="images/logoprojekt.png" alt="picture of logo">
+                <img class="center-image" id="spritesheet" src="images/spritesheet.PNG" alt="picture of logo">
             </div>
         </section>
     </div>
