--- a/index.html
+++ b/index.html
@@ -41,14 +41,13 @@
                     <h2 class="text-center font-white" >My skillsets</h2>
                     <div class="split">
                         <div class="skillsets">
-                        <div><h3 class="font-white">Adobe Programs</h3><img id="adobe" src="images/adobe.png" alt="Adobe Program Logos"></div>
-                        <div><h3 class="font-white">HTML & CSS</h3> <img id="htmlcss" src="images/htmlcss.png" alt="HTML&CSS Logo"></div>
-                        <div><h3 class="font-white">Wordpress</h3><img id="wordpress" src="images/wordpress.png" alt="wordpress logo"></div>
-                        <div><h3 class="font-white">Photo & Video</h3><img id="camera" src="images/camera.png" alt="camera logo"></div>
+                        <div><h3 class="font-white nomargin">Adobe Programs</h3><img id="adobe" src="images/adobe.png" alt="Adobe Program Logos"></div>
+                        <div><h3 class="font-white nomargin">HTML & CSS</h3> <img id="htmlcss" src="images/htmlcss.png" alt="HTML&CSS Logo"></div>
+                        <div><h3 class="font-white nomargin">Wordpress</h3><img id="wordpress" src="images/wordpress.png" alt="wordpress logo"></div>
+                        <div><h3 class="font-white nomargin">Photo & Video</h3><img id="camera" src="images/camera.png" alt="camera logo"></div>
                     </div>
                 </div>
             </section>
-            
         </div>
         <div class="container">
             <section class="bg-white" id="aboutme">
@@ -64,16 +63,16 @@
                 <h2 class="text-center font-white">Projects</h2>
                 <div class="split">
                     <div class="projects font-white" id="projects">
-                        <a href="/projekt1.html"><div><h3 class="font-white">Redesign of Website</h3><img id="redesignfront" src="images/side1redesign.png" alt="picture of website redesign"></div></a>
-                        <a href="/projekt2.html"><div><h3 class="font-white">CSS Animation</h3><img id="cssanimation" src="images/logoprojekt.png" alt="picture of logo"></div></a>
-                        <a href="/projekt3.html"><div><h3 class="font-white">Projekt 2</h3></div></a>
+                        <a href="/projekt1.html"><div><h3 class="font-white nomargin">Redesign of Website</h3><img id="redesignfront" src="images/side1redesign.png" alt="picture of website redesign"></div></a>
+                        <a href="/projekt2.html"><div><h3 class="font-white nomargin">CSS Animation</h3><img id="cssanimation" src="images/logoprojekt.png" alt="picture of logo"></div></a>
+                        <a href="/projekt3.html"><div id="groupuplogo"><h3 class="font-white nomargin">App Project</h3><img id="groupuplogomargin" src="/images/groupuplogo.JPG" alt="groupup app logo"></div></a>
                     </div>
                 </div>
                 <div class="split">
                     <div class="projects font-white">
-                        <a href="/projekt4.html"><div><h3 class="font-white">Projekt 1</h3></div></a>
-                        <a href="/projekt5.html"><div><h3 class="font-white">Projekt 2</h3></div></a>
-                        <a href="/projekt6.html"><div><h3 class="font-white">Projekt 2</h3></div></a>
+                        <a href="/projekt4.html"><div><h3 class="font-white nomargin">Exam Project</h3><div class="logo text-center" id="myportfoliowebsite">lind.gg<br>Portfolio<br>Website</div></div></a>
+                        <a href="/projekt5.html"><div><h3 class="font-white nomargin">Video Project</h3><img id="peter" src="/images/peter.png" alt="picture of Peter with skateboard in hand"></div></a>
+                        <a href="/projekt6.html"><div><h3 class="font-white nomargin">Projekt 2</h3></div></a>
                     </div>
                 </div>
             </section>
@@ -83,7 +82,7 @@
                 <footer class="split">
                     <h2 class="font-green" id="contact">Contact</h2>
                     <div><p class="font-green">I am always ready to answer questions about my work or possible projects in the future</p></div>
-                </footer>>
+                </footer>
                 <footer class="split">
                     <ul id="footerlist">
                         <li><a href="">emilwaellind@gmail.com</a></li>
