--- a/projekt1.html
+++ b/projekt1.html
@@ -27,10 +27,10 @@
         <section class="bg-green stretch">
             <h2 class="font-white text-left">Redesigning website</h2>
             <div class="split">
-                <p class="font-white">This project was about bing bong Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, adipisci.</p>
+                <p class="font-white text-left">In this project our group chose a website to give a complete redesign. <br>I helped create the design and the prototyping for the website.<br>The images below show some of our final product.</p>
             </div>
             <div class="split-images">
-                <img class="center-image" src="/images/side1redesign.png" alt="picture of redesign">
+                <img class="center-image" id="side1redesign" src="/images/side1redesign.png" alt="picture of redesign">
                 <img class="center-image" src="/images/side2redesign.png" alt="picture of redesign">
                 <img class="center-image" src="/images/redesignside3.PNG" alt="picture of redesign">
             </div>
