--- a/projekt2.html
+++ b/projekt2.html
@@ -27,11 +27,11 @@
         <section class="bg-green stretch">
             <h2 class="font-white text-left">CSS Animation</h2>
             <div class="split">
-                <p class="font-white">This project was about creating a moving animation using Illustrator and CSS. I decided to animate a logo i made.<br>The animation works by moving a spritesheet made in illustrator.</p>
+                <p class="font-white text-left">This project was about creating a moving animation using Illustrator and CSS. I decided to animate a logo i made.<br>The animation works by moving a spritesheet made in illustrator.</p>
             </div>
             <div class="split-images">
                 <img class="center-image" src="images/logoprojekt.png" alt="picture of logo">
-                <img class="center-image" id="spritesheet" src="images/spritesheet.PNG" alt="picture of logo">
+                <img class="center-image" id="spritesheet" src="images/spritesheet.PNG" alt="picture of spritesheet for logo">
             </div>
         </section>
     </div>
