--- a/projekt3.html
+++ b/projekt3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html></html>
 <head>
-    <title>project-1</title>
+    <title>Group-Up project</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -25,14 +25,14 @@
     </header>
     <div class="container">
         <section class="bg-green stretch">
-            <h2 class="font-white text-left">Redesigning website</h2>
+            <h2 class="font-white text-left">Making a app prototype</h2>
             <div class="split">
-                <p class="font-white">This project was about bing bong Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, adipisci.</p>
+                <p class="font-white text-left">In this project our groups task was making a "dating" app prototype. We decided to create an app where groups of friends could meet other groups. I helped create both design and a functional prototype in Adobe XD.<br>The images below show the final result</p>
             </div>
             <div class="split-images">
-                <img class="center-image" src="/images/" alt="picture of redesign">
-                <img class="center-image" src="/images/" alt="picture of redesign">
-                <img class="center-image" src="/images/" alt="picture of redesign">
+                <img class="center-image" src="/images/groupup1.JPG" alt="picture of appdesign">
+                <img class="center-image" src="/images/groupup2.JPG" alt="picture of appdesign">
+                <img class="center-image" src="/images/groupup3.JPG" alt="picture of appdesign">
             </div>
         </section>
     </div>
