--- a/projekt5.html
+++ b/projekt5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html></html>
 <head>
-    <title>project-1</title>
+    <title>Group-Up project</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -25,14 +25,12 @@
     </header>
     <div class="container">
         <section class="bg-green stretch">
-            <h2 class="font-white text-left">Redesigning website</h2>
+            <h2 class="font-white text-left">Making a app prototype</h2>
             <div class="split">
-                <p class="font-white">This project was about bing bong Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, adipisci.</p>
+                <p class="font-white text-left">In this project our groups task was to shoot a video of one of our hobbies. We decided to make an interview style video of Peters skating hobby. We all helped shooting the video, but the editing was done entirely by me.<br> The video can be seen below.</p>
             </div>
             <div class="split-images">
-                <img class="center-image" src="/images/" alt="picture of redesign">
-                <img class="center-image" src="/images/" alt="picture of redesign">
-                <img class="center-image" src="/images" alt="picture of redesign">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/aabEG-gG9uU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
     </div>
@@ -47,9 +45,3 @@
         </section>
     </div>
 
-
-
-
-
-</body>
-</html>
