--- a/projekt4.html
+++ b/projekt4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html></html>
 <head>
-    <title>project-1</title>
+    <title>Exam project</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -27,7 +27,7 @@
         <section class="bg-green stretch">
             <h2 class="font-white text-left">Redesigning website</h2>
             <div class="split">
-                <p class="font-white">This project was about bing bong Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, adipisci.</p>
+                <p class="font-white text-left">In this project i was given the task of creating my own personal portfolio. The portfolio is the one you are currently visiting.<br>I created the portfolio using only HTMT5 and CSS. The portfolio consists of a one-page designed frontpage, with linked pages of individual project descriptions.</p>
             </div>
             <div class="split-images">
                 <img class="center-image" src="/images/" alt="picture of redesign">
