--- a/projekt5.html
+++ b/projekt5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html></html>
 <head>
-    <title>Group-Up project</title>
+    <title>Video Project</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
 </head>
