--- a/projekt1.html
+++ b/projekt1.html
@@ -4,6 +4,7 @@
     <title>Redesign of website</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
     <header class="bg-lightgreen">
@@ -13,9 +14,9 @@
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
         <nav>
             <ul class="nav-font">
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="/lind.gg">Home</a></li>
                 <li><a href="/index.html#aboutme">About me</a></li>
-                <li><a href="/index.html#projects">Projects</a></li>
+                <li><a href="lind.gg#projects">Projects</a></li>
                 <li><a href="/index.html#contact">Contact</a></li>
             </ul>
         </nav>
@@ -29,6 +30,7 @@
             <div class="split">
                 <p class="font-white text-left">In this project our group chose a website to give a complete redesign. <br>I helped create the design and the prototyping for the website.<br>The images below show some of our final product.</p>
             </div>
+            <div class="line"></div>
             <div class="split-images">
                 <img class="center-image" id="side1redesign" src="/images/side1redesign.png" alt="picture of redesign">
                 <img class="center-image" src="/images/side2redesign.png" alt="picture of redesign">
