--- a/projekt2.html
+++ b/projekt2.html
@@ -4,6 +4,7 @@
     <title>CSS Animation</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
     <header class="bg-lightgreen">
@@ -29,6 +30,7 @@
             <div class="split">
                 <p class="font-white text-left">This project was about creating a moving animation using Illustrator and CSS. I decided to animate a logo i made.<br>The animation works by moving a spritesheet made in illustrator.</p>
             </div>
+            <div class="line"></div>
             <div class="split-images">
                 <img class="center-image" src="images/logoprojekt.png" alt="picture of logo">
                 <img class="center-image" id="spritesheet" src="images/spritesheet.PNG" alt="picture of spritesheet for logo">
