--- a/projekt3.html
+++ b/projekt3.html
@@ -4,6 +4,7 @@
     <title>Group-Up project</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
     <header class="bg-lightgreen">
@@ -29,6 +30,7 @@
             <div class="split">
                 <p class="font-white text-left">In this project our groups task was making a "dating" app prototype. We decided to create an app where groups of friends could meet other groups. I helped create both design and a functional prototype in Adobe XD.<br>The images below show the final result</p>
             </div>
+            <div class="line"></div>
             <div class="split-images">
                 <img class="center-image" src="/images/groupup1.JPG" alt="picture of appdesign">
                 <img class="center-image" src="/images/groupup2.JPG" alt="picture of appdesign">
