--- a/projekt4.html
+++ b/projekt4.html
@@ -4,6 +4,7 @@
     <title>Exam project</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
     <header class="bg-lightgreen">
@@ -29,6 +30,7 @@
             <div class="split">
                 <p class="font-white text-left">In this project i was given the task of creating my own personal portfolio. The portfolio is the one you are currently visiting.<br>I created the portfolio using only HTMT5 and CSS. The portfolio consists of a one-page designed frontpage, with linked pages of individual project descriptions.</p>
             </div>
+            <div class="line"></div>
             <div class="split-images">
                 <img class="center-image" src="/images/" alt="picture of redesign">
                 <img class="center-image" src="/images/" alt="picture of redesign">
