--- a/projekt5.html
+++ b/projekt5.html
@@ -4,6 +4,7 @@
     <title>Video Project</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
     <header class="bg-lightgreen">
@@ -29,6 +30,7 @@
             <div class="split">
                 <p class="font-white text-left">In this project our groups task was to shoot a video of one of our hobbies. We decided to make an interview style video of Peters skating hobby. We all helped shooting the video, but the editing was done entirely by me.<br> The video can be seen below.</p>
             </div>
+            <div class="line"></div>
             <div class="split-images">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/aabEG-gG9uU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
