--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>lind.gg portfolio</title>
         <meta charset="UTF-8">
@@ -42,14 +42,14 @@
                     <h2 class="text-center font-white" >My skillsets</h2>
                     <div class="split">
                         <div class="skillsets">
-                        <div><h3 class="font-white nomargin">Adobe Programs</h3><img id="adobe" src="images/adobe.png" alt="Adobe Program Logos"></div>
-                        <div><h3 class="font-white nomargin">HTML & CSS</h3> <img id="htmlcss" src="images/htmlcss.png" alt="HTML&CSS Logo"></div>
-                        <div><h3 class="font-white nomargin">Wordpress</h3><img id="wordpress" src="images/wordpress.png" alt="wordpress logo"></div>
-                        <div><h3 class="font-white nomargin">Photo & Video</h3><img id="camera" src="images/camera.png" alt="camera logo"></div>
+                            <div><h3 class="font-white nomargin">Adobe Programs</h3><img id="adobe" src="images/adobe.png" alt="Adobe Program Logos"></div>
+                            <div><h3 class="font-white nomargin">HTML & CSS</h3> <img id="htmlcss" src="images/htmlcss.png" alt="HTML&CSS Logo"></div>
+                            <div><h3 class="font-white nomargin">Wordpress</h3><img id="wordpress" src="images/wordpress.png" alt="wordpress logo"></div>
+                            <div><h3 class="font-white nomargin">Photo & Video</h3><img id="camera" src="images/camera.png" alt="camera logo"></div>
+                        </div>
                     </div>
                 </div>
             </section>
-        </div>
         <div class="container">
             <section class="bg-white" id="aboutme">
                 <h2 class="font-green">About me</h2>
@@ -65,15 +65,15 @@
                 <p class="text-center font-white">These are a handpicked bunch of my favorite projects. Click on them to learn more!</p>
                 <div class="split">
                     <div class="projects font-white">
-                        <a href="/projekt1.html"><div class="boxhover"><h3 class="font-white nomargin">Redesign of Website</h3><img id="redesignfront" src="images/side1redesign.png" alt="picture of website redesign"></div></a>
-                        <a href="/projekt2.html"><div><h3 class="font-white nomargin">CSS Animation</h3><img id="cssanimation" src="images/logoprojekt.png" alt="picture of logo"></div></a>
-                        <a href="/projekt3.html"><div id="groupuplogo"><h3 class="font-white nomargin">App Project</h3><img id="groupuplogomargin" src="/images/groupuplogo.JPG" alt="groupup app logo"></div></a>
+                        <a href="/projekt1.html"><div class="hover"><h3 class="font-white nomargin">Redesign of Website</h3><img id="redesignfront" src="images/side1redesign.png" alt="picture of website redesign"></div></a>
+                        <a href="/projekt2.html"><div class="hover"><h3 class="font-white nomargin">CSS Animation</h3><img id="cssanimation" src="images/logoprojekt.png" alt="picture of logo"></div></a>
+                        <a href="/projekt3.html"><div class="hover"><h3 class="font-white nomargin">App Project</h3><img id="groupuplogomargin" src="/images/groupuplogo.JPG" alt="groupup app logo"></div></a>
                     </div>
                 </div>
                 <div class="split">
                     <div class="projects font-white">
-                        <a href="/projekt4.html"><div><h3 class="font-white nomargin">Exam Project</h3><div class="logo text-center" id="myportfoliowebsite">lind.gg<br>Portfolio<br>Website</div></div></a>
-                        <a href="/projekt5.html"><div><h3 class="font-white nomargin">Video Project</h3><img id="peter" src="/images/peter.png" alt="picture of Peter with skateboard in hand"></div></a>
+                        <a href="/projekt4.html"><div class="hover"><h3 class="font-white nomargin">Exam Project</h3><div class="logo text-center" id="myportfoliowebsite">lind.gg<br>Portfolio<br>Website</div></div></a>
+                        <a href="/projekt5.html"><div class="hover"><h3 class="font-white nomargin">Video Project</h3><img id="peter" src="/images/peter.png" alt="picture of Peter with skateboard in hand"></div></a>
                     </div>
                 </div>
             </section>
