--- a/projekt2.html
+++ b/projekt2.html
@@ -1,56 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>CSS Animation</title>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-</head>
-<body>
-    <header class="bg-lightgreen">
-        <div class="logo">
-            <a class="font-white" href="/index.html">lind.gg</a>
+    <head>
+        <title>CSS Animation</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+    </head>
+    <body>
+        <header class="bg-lightgreen">
+            <div class="logo">
+                <a class="font-white" href="/index.html">lind.gg</a>
+            </div>
+            <input type="checkbox" id="nav-toggle" class="nav-toggle">
+            <nav>
+                <ul class="nav-font">
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/index.html#aboutme">About me</a></li>
+                    <li><a href="/index.html#projects">Projects</a></li>
+                    <li><a href="/index.html#contact">Contact</a></li>
+                </ul>
+            </nav>
+            <label for="nav-toggle" class="nav-toggle-label">
+                <span></span>
+            </label>
+        </header>
+        <div class="container">
+            <section class="bg-green stretch">
+                <h2 class="font-white text-left">CSS Animation</h2>
+                <div class="split">
+                    <p class="font-white text-left">This project was about creating a moving animation using Illustrator and CSS. I decided to animate a logo i made.<br>The animation works by moving a spritesheet made in illustrator.</p>
+                </div>
+                <div class="line"></div>
+                <div class="split-images">
+                    <img class="center-image" src="images/logoprojekt.png" alt="picture of logo">
+                    <img class="center-image" id="spritesheet" src="images/spritesheet.PNG" alt="picture of spritesheet for logo">
+                </div>
+            </section>
         </div>
-        <input type="checkbox" id="nav-toggle" class="nav-toggle">
-        <nav>
-            <ul class="nav-font">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/index.html#aboutme">About me</a></li>
-                <li><a href="/index.html#projects">Projects</a></li>
-                <li><a href="/index.html#contact">Contact</a></li>
-            </ul>
-        </nav>
-        <label for="nav-toggle" class="nav-toggle-label">
-            <span></span>
-        </label>
-    </header>
-    <div class="container">
-        <section class="bg-green stretch">
-            <h2 class="font-white text-left">CSS Animation</h2>
-            <div class="split">
-                <p class="font-white text-left">This project was about creating a moving animation using Illustrator and CSS. I decided to animate a logo i made.<br>The animation works by moving a spritesheet made in illustrator.</p>
-            </div>
-            <div class="line"></div>
-            <div class="split-images">
-                <img class="center-image" src="images/logoprojekt.png" alt="picture of logo">
-                <img class="center-image" id="spritesheet" src="images/spritesheet.PNG" alt="picture of spritesheet for logo">
-            </div>
-        </section>
-    </div>
-    <div class="container">
-        <section class="bg-white">
-            <div class="split">
-                <h2 class="font-green">Contact</h2>
-                <div><p class="font-green">I am always ready to answer questions about my work or possible projects in the future</p></div>
-                <p>emilwaellind@gmail.com</p>
-                <p>42544888</p>
-            </div>
-        </section>
-    </div>
-
-
-
-
-
-</body>
+        <div class="container">
+            <section class="bg-white" id="contact">
+                <footer>
+                    <div class="footer-content">
+                        <h2>Contact</h2>
+                        <p>I am always ready to answer questions about my work or possible projects in the future</p>
+                        <ul class="socials">
+                            <li><a href="">emilwaellind@gmail.com</a></li>
+                            <li><a href="">+45 42544888</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-bottom">
+                        <p>Copyright © 2022 lind.gg</p>
+                    </div>
+                </footer>
+            </section>
+        </div>
+    </body>
 </html>
