--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
-        <header class="bg-lightgreen">
+        <header class="bg-lightgreen" id="header">
             <div class="logo">
-                <a class="font-white" href="/index.html">lind.gg</a>
+                <a class="font-white" href="index.html">lind.gg</a>
             </div>
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <nav>
@@ -50,30 +50,31 @@
                     </div>
                 </div>
             </section>
-        <div class="container">
             <section class="bg-white" id="aboutme">
-                <h2 class="font-green">About me</h2>
-                <div class="split">
-                    <div><p class="font-green" id="about-me">Hi! My name is Emil, I'm 21 years old and studying in Odense. I'm an aspiring front end developer trying to find my place in the market. I have a passion for coding in HTML and CSS and I am hoping to learn javascript later on down the road. I also have an interest in creating content. I´m experienced in most Adobe programs, but i also enjoy the practical work such as filming or taking photos. In my free time I´m a down to earth guy who loves either spending time with friends or perfecting my craft in my hobby, which happens to be coding.</p></div>
-                    <img class="profil2" src="images/profil2.png" alt="Picture of Emil">
+                <div class="container">
+                    <h2 class="font-green">About me</h2>
+                    <div class="split">
+                        <div><p class="font-green" id="about-me">Hi! My name is Emil, I'm 21 years old and studying in Odense. I'm an aspiring front end developer trying to find my place in the market. I have a passion for coding in HTML and CSS and I am hoping to learn javascript later on down the road. I also have an interest in creating content. I´m experienced in most Adobe programs, but i also enjoy the practical work such as filming or taking photos. In my free time I´m a down to earth guy who loves either spending time with friends or perfecting my craft in my hobby, which happens to be coding.</p></div>
+                        <img class="profil2" src="images/profil2.png" alt="Picture of Emil">
+                    </div>
                 </div>
             </section>
-        </div>
+       
         <div class="container">
             <section class="bg-green" id="projects">
                 <h2 class="text-center font-white">Projects</h2>
                 <p class="text-center font-white">These are a handpicked bunch of my favorite projects. Click on them to learn more!</p>
                 <div class="split">
                     <div class="projects font-white">
-                        <a href="/projekt1.html"><div class="hover"><h3 class="font-white nomargin">Redesign of Website</h3><img id="redesignfront" src="images/side1redesign.png" alt="picture of website redesign"></div></a>
-                        <a href="/projekt2.html"><div class="hover"><h3 class="font-white nomargin">CSS Animation</h3><img id="cssanimation" src="images/logoprojekt.png" alt="picture of logo"></div></a>
-                        <a href="/projekt3.html"><div class="hover"><h3 class="font-white nomargin">App Project</h3><img id="groupuplogomargin" src="/images/groupuplogo.JPG" alt="groupup app logo"></div></a>
+                        <a href="projekt1.html"><div class="hover"><h3 class="font-white nomargin">Redesign of Website</h3><img id="redesignfront" src="images/side1redesign.png" alt="picture of website redesign"></div></a>
+                        <a href="projekt2.html"><div class="hover"><h3 class="font-white nomargin">CSS Animation</h3><img id="cssanimation" src="images/logoprojekt.png" alt="picture of logo"></div></a>
+                        <a href="projekt3.html"><div class="hover"><h3 class="font-white nomargin">App Project</h3><img id="groupuplogomargin" src="images/groupuplogo.JPG" alt="groupup app logo"></div></a>
                     </div>
                 </div>
                 <div class="split">
                     <div class="projects font-white">
-                        <a href="/projekt4.html"><div class="hover"><h3 class="font-white nomargin">Exam Project</h3><div class="logo text-center" id="myportfoliowebsite">lind.gg<br>Portfolio<br>Website</div></div></a>
-                        <a href="/projekt5.html"><div class="hover"><h3 class="font-white nomargin">Video Project</h3><img id="peter" src="/images/peter.png" alt="picture of Peter with skateboard in hand"></div></a>
+                        <a href="projekt4.html"><div class="hover"><h3 class="font-white nomargin">Exam Project</h3><div class="logo text-center" id="myportfoliowebsite">lind.gg<br>Portfolio<br>Website</div></div></a>
+                        <a href="projekt5.html"><div class="hover"><h3 class="font-white nomargin">Video Project</h3><img id="peter" src="images/peter.png" alt="picture of Peter with skateboard in hand"></div></a>
                     </div>
                 </div>
             </section>
