--- a/projekt3.html
+++ b/projekt3.html
@@ -9,15 +9,15 @@
     <body>
         <header class="bg-lightgreen">
             <div class="logo">
-                <a class="font-white" href="/index.html">lind.gg</a>
+                <a class="font-white" href="index.html">lind.gg</a>
             </div>
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <nav>
                 <ul class="nav-font">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/index.html#aboutme">About me</a></li>
-                    <li><a href="/index.html#projects">Projects</a></li>
-                    <li><a href="/index.html#contact">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html#aboutme">About me</a></li>
+                    <li><a href="index.html#projects">Projects</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </nav>
             <label for="nav-toggle" class="nav-toggle-label">
@@ -32,9 +32,9 @@
                 </div>
                 <div class="line"></div>
                 <div class="split-images">
-                    <img class="center-image" src="/images/groupup1.JPG" alt="picture of appdesign">
-                    <img class="center-image" src="/images/groupup2.JPG" alt="picture of appdesign">
-                    <img class="center-image" src="/images/groupup3.JPG" alt="picture of appdesign">
+                    <img class="center-image" src="images/groupup1.JPG" alt="picture of appdesign">
+                    <img class="center-image" src="images/groupup2.JPG" alt="picture of appdesign">
+                    <img class="center-image" src="images/groupup3.JPG" alt="picture of appdesign">
                 </div>
             </section>
         </div>
