--- a/projekt2.html
+++ b/projekt2.html
@@ -9,15 +9,15 @@
     <body>
         <header class="bg-lightgreen">
             <div class="logo">
-                <a class="font-white" href="/index.html">lind.gg</a>
+                <a class="font-white" href="index.html">lind.gg</a>
             </div>
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <nav>
                 <ul class="nav-font">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/index.html#aboutme">About me</a></li>
-                    <li><a href="/index.html#projects">Projects</a></li>
-                    <li><a href="/index.html#contact">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html#aboutme">About me</a></li>
+                    <li><a href="index.html#projects">Projects</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </nav>
             <label for="nav-toggle" class="nav-toggle-label">
