--- a/projekt4.html
+++ b/projekt4.html
@@ -9,15 +9,15 @@
     <body>
         <header class="bg-lightgreen">
             <div class="logo">
-                <a class="font-white" href="/index.html">lind.gg</a>
+                <a class="font-white" href="index.html">lind.gg</a>
             </div>
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <nav>
                 <ul class="nav-font">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/index.html#aboutme">About me</a></li>
-                    <li><a href="/index.html#projects">Projects</a></li>
-                    <li><a href="/index.html#contact">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html#aboutme">About me</a></li>
+                    <li><a href="index.html#projects">Projects</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </nav>
             <label for="nav-toggle" class="nav-toggle-label">
@@ -32,8 +32,8 @@
                 </div>
                 <div class="line"></div>
                 <div class="split-images">
-                    <img class="center-image" src="/images/code1.JPG" alt="picture of redesign">
-                    <img class="center-image" src="/images/code2.JPG" alt="picture of redesign">
+                    <img class="center-image" src="images/code1.JPG" alt="picture of redesign">
+                    <img class="center-image" src="images/code2.JPG" alt="picture of redesign">
                 </div>
             </section>
         </div>
