--- a/projekt2.html
+++ b/projekt2.html
@@ -35,8 +35,10 @@
                     <img class="center-image" src="images/logoprojekt.png" alt="picture of logo">
                     <img class="center-image" id="spritesheet" src="images/spritesheet.PNG" alt="picture of spritesheet for logo">
                 </div>
+                <a href="https://lind.gg/Kodning/animation-workshop/movinglogo.html" target="_blank"><div class="knap font-white">Se animation her</div></a>
             </section>
         </div>
+        
         <div class="container">
             <section class="bg-white" id="contact">
                 <footer>
