--- a/projekt3.html
+++ b/projekt3.html
@@ -28,7 +28,7 @@
             <section class="bg-green stretch">
                 <h2 class="font-white text-left">Making a app prototype</h2>
                 <div class="split">
-                    <p class="font-white text-left">In this project our groups task was making a "dating" app prototype. We decided to create an app where groups of friends could meet other groups. I helped create both design and a functional prototype in Adobe XD.<br>The images below show the final result</p>
+                    <p class="font-white text-left">In this project our groups task was making a "dating" app prototype. We decided to create an app where groups of friends could meet other groups.<br> I helped create both design and a functional prototype in Adobe XD.<br>The images below show the final result</p>
                 </div>
                 <div class="line"></div>
                 <div class="split-images">
